--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@
 .ml-5 {
   margin-left: 20px;
 }
+.mb-4 {
+  margin-bottom: 16px;
+}
 .title {
   font-size: 24px;
   font-weight: bold;
@@ -29,4 +32,16 @@ label {
 }
 input:not([type="number"]) {
   margin-left: 8px;
+}
+
+.input-selectContent {
+  width: 200px;
+}
+
+.displayEyeDropper {
+  display: inline-block;
+  vertical-align: middle;
+  width: 70px;
+  height: 50px;
+  border: 2px solid black;
 }
